k8s/base/services/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-frontend
  labels:
    app: service-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-frontend
  template:
    metadata:
      labels:
        app: service-frontend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: service-frontend
        image: korgosu/service-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "200m"
