k8s/base/services/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: service-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    
  type: LoadBalancer
